; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_parse_number_value.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby-json/src/extr_parson.c_parse_number_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@INT64_MAX = common dso_local global i64 0, align 8
@INT64_MIN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8**)* @parse_number_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @parse_number_value(i8** %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca double, align 8
  store i8** %0, i8*** %3, align 8
  store double 0.000000e+00, double* %5, align 8
  store i64 0, i64* @errno, align 8
  %6 = load i8**, i8*** %3, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = call double @strtod(i8* %7, i8** %4)
  store double %8, double* %5, align 8
  %9 = load i64, i64* @errno, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %23, label %11

11:                                               ; preds = %1
  %12 = load i8**, i8*** %3, align 8
  %13 = load i8*, i8** %12, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load i8**, i8*** %3, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = ptrtoint i8* %14 to i64
  %18 = ptrtoint i8* %16 to i64
  %19 = sub i64 %17, %18
  %20 = trunc i64 %19 to i32
  %21 = call i32 @is_decimal(i8* %13, i32 %20)
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %11, %1
  store i32* null, i32** %2, align 8
  br label %29

24:                                               ; preds = %11
  %25 = load i8*, i8** %4, align 8
  %26 = load i8**, i8*** %3, align 8
  store i8* %25, i8** %26, align 8
  %27 = load double, double* %5, align 8
  %28 = call i32* @json_value_init_number(double %27)
  store i32* %28, i32** %2, align 8
  br label %29

29:                                               ; preds = %24, %23
  %30 = load i32*, i32** %2, align 8
  ret i32* %30
}

declare dso_local double @strtod(i8*, i8**) #1

declare dso_local i32 @is_decimal(i8*, i32) #1

declare dso_local i32* @json_value_init_number(double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
